# netconnectd_mrbeam

./: INSTALL.md  setup.cfg  setup.py  update.sh  versioneer.py
extras/: netconnectd.default  netconnectd.init  netconnectd.logrotate  netconnectd.service  netconnectd.yaml
netconnectd/: __init__.py  _version.py  client.py  daemon.py  protocol.py  server.py  util.py
